#1 WiP Realm Management

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Backend",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "${workspaceRoot}/src/backend_main.py",
             "cwd": "${workspaceRoot}",
             "args": [],
             "console": "integratedTerminal",
