--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,28 @@
             "name": "Backend",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceRoot}/src/backend_main.py",
+            "program": "${workspaceRoot}/src/main.py",
             "cwd": "${workspaceRoot}",
             "args": [],
             "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/project.env",
             "env": {
-                "PYTHONPATH": "$PYTHONPATH:${workspaceRoot}/src"
+                "PYTHONPATH": "${workspaceFolder}/src:${PYTHONPATH}",
+                "PATH": "${workspaceFolder}/src:${PATH}"
+            }
+        },
+        {
+            "name": "Test",
+            "type":"python",
+            "module": "pytest",
+            "request": "launch",
+            "cwd": "${workspaceRoot}",
+            "args": [],
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/project.env",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src:${PYTHONPATH}",
+                "PATH": "${workspaceFolder}/src:${PATH}"
             }
         }
     ]
